syntax = "proto3";

package adapter.proto;

import "tendermint/types/validator.proto";
import "tendermint/types/params.proto";

option go_package = "github.com/rollkit/go-execution-abci/adapter/proto";

// StateProto contains information about current state of the blockchain.
message StateProto {
  tendermint.types.ConsensusParams consensus_params = 1;
  int64 last_height_consensus_params_changed = 2;
  tendermint.types.ValidatorSet validators = 3;
  tendermint.types.ValidatorSet next_validators = 4;
  tendermint.types.ValidatorSet last_validators = 5;
  int64 last_height_validators_changed = 6;
}